cola-analizador/.antlr/colaParser.java
// Generated from c:/Users/pedro/Documents/52058/cola-analizador/cola.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class colaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLA=1, CREAR=2, ENCOLAR=3, DESENCOLAR=4, VERPRIMERO=5, LPAREN=6, RPAREN=7, 
		LBRACK=8, RBRACK=9, LLLAVE=10, RLLAVE=11, EXCL=12, COMA=13, NUMERO=14, 
		TEXTO=15, ID=16, WS=17;
	public static final int
		RULE_programa = 0, RULE_comandos = 1, RULE_operacion = 2, RULE_crear = 3, 
		RULE_encolar = 4, RULE_desencolar = 5, RULE_verPrimero = 6, RULE_lista = 7, 
		RULE_valor = 8, RULE_numero = 9, RULE_texto = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "comandos", "operacion", "crear", "encolar", "desencolar", 
			"verPrimero", "lista", "valor", "numero", "texto"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'cola'", "'crear'", "'encolar'", "'desencolar'", "'verPrimero'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'!'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLA", "CREAR", "ENCOLAR", "DESENCOLAR", "VERPRIMERO", "LPAREN", 
			"RPAREN", "LBRACK", "RBRACK", "LLLAVE", "RLLAVE", "EXCL", "COMA", "NUMERO", 
			"TEXTO", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cola.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public colaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode COLA() { return getToken(colaParser.COLA, 0); }
		public TerminalNode ID() { return getToken(colaParser.ID, 0); }
		public TerminalNode LLLAVE() { return getToken(colaParser.LLLAVE, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode RLLAVE() { return getToken(colaParser.RLLAVE, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			match(COLA);
			setState(23);
			match(ID);
			setState(24);
			match(LLLAVE);
			setState(25);
			comandos();
			setState(26);
			match(RLLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public List<OperacionContext> operacion() {
			return getRuleContexts(OperacionContext.class);
		}
		public OperacionContext operacion(int i) {
			return getRuleContext(OperacionContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitComandos(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 60L) != 0)) {
				{
				{
				setState(28);
				operacion();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperacionContext extends ParserRuleContext {
		public EncolarContext encolar() {
			return getRuleContext(EncolarContext.class,0);
		}
		public DesencolarContext desencolar() {
			return getRuleContext(DesencolarContext.class,0);
		}
		public VerPrimeroContext verPrimero() {
			return getRuleContext(VerPrimeroContext.class,0);
		}
		public CrearContext crear() {
			return getRuleContext(CrearContext.class,0);
		}
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterOperacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitOperacion(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operacion);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENCOLAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				encolar();
				}
				break;
			case DESENCOLAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				desencolar();
				}
				break;
			case VERPRIMERO:
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				verPrimero();
				}
				break;
			case CREAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(37);
				crear();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CrearContext extends ParserRuleContext {
		public TerminalNode CREAR() { return getToken(colaParser.CREAR, 0); }
		public TerminalNode LPAREN() { return getToken(colaParser.LPAREN, 0); }
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(colaParser.RPAREN, 0); }
		public TerminalNode EXCL() { return getToken(colaParser.EXCL, 0); }
		public CrearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_crear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterCrear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitCrear(this);
		}
	}

	public final CrearContext crear() throws RecognitionException {
		CrearContext _localctx = new CrearContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_crear);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(CREAR);
			setState(41);
			match(LPAREN);
			setState(42);
			lista();
			setState(43);
			match(RPAREN);
			setState(44);
			match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EncolarContext extends ParserRuleContext {
		public TerminalNode ENCOLAR() { return getToken(colaParser.ENCOLAR, 0); }
		public TerminalNode LPAREN() { return getToken(colaParser.LPAREN, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(colaParser.RPAREN, 0); }
		public TerminalNode EXCL() { return getToken(colaParser.EXCL, 0); }
		public EncolarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encolar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterEncolar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitEncolar(this);
		}
	}

	public final EncolarContext encolar() throws RecognitionException {
		EncolarContext _localctx = new EncolarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_encolar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ENCOLAR);
			setState(47);
			match(LPAREN);
			setState(48);
			valor();
			setState(49);
			match(RPAREN);
			setState(50);
			match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DesencolarContext extends ParserRuleContext {
		public TerminalNode DESENCOLAR() { return getToken(colaParser.DESENCOLAR, 0); }
		public TerminalNode LPAREN() { return getToken(colaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(colaParser.RPAREN, 0); }
		public TerminalNode EXCL() { return getToken(colaParser.EXCL, 0); }
		public DesencolarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_desencolar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterDesencolar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitDesencolar(this);
		}
	}

	public final DesencolarContext desencolar() throws RecognitionException {
		DesencolarContext _localctx = new DesencolarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_desencolar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(DESENCOLAR);
			setState(53);
			match(LPAREN);
			setState(54);
			match(RPAREN);
			setState(55);
			match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VerPrimeroContext extends ParserRuleContext {
		public TerminalNode VERPRIMERO() { return getToken(colaParser.VERPRIMERO, 0); }
		public TerminalNode LPAREN() { return getToken(colaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(colaParser.RPAREN, 0); }
		public TerminalNode EXCL() { return getToken(colaParser.EXCL, 0); }
		public VerPrimeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verPrimero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterVerPrimero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitVerPrimero(this);
		}
	}

	public final VerPrimeroContext verPrimero() throws RecognitionException {
		VerPrimeroContext _localctx = new VerPrimeroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_verPrimero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(VERPRIMERO);
			setState(58);
			match(LPAREN);
			setState(59);
			match(RPAREN);
			setState(60);
			match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(colaParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(colaParser.RBRACK, 0); }
		public List<ValorContext> valor() {
			return getRuleContexts(ValorContext.class);
		}
		public ValorContext valor(int i) {
			return getRuleContext(ValorContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(colaParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(colaParser.COMA, i);
		}
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitLista(this);
		}
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(LBRACK);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMERO || _la==TEXTO) {
				{
				setState(63);
				valor();
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(64);
					match(COMA);
					setState(65);
					valor();
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(73);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorContext extends ParserRuleContext {
		public NumeroContext numero() {
			return getRuleContext(NumeroContext.class,0);
		}
		public TextoContext texto() {
			return getRuleContext(TextoContext.class,0);
		}
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitValor(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_valor);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				numero();
				}
				break;
			case TEXTO:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				texto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumeroContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(colaParser.NUMERO, 0); }
		public NumeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterNumero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitNumero(this);
		}
	}

	public final NumeroContext numero() throws RecognitionException {
		NumeroContext _localctx = new NumeroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_numero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(NUMERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextoContext extends ParserRuleContext {
		public TerminalNode TEXTO() { return getToken(colaParser.TEXTO, 0); }
		public TextoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_texto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).enterTexto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof colaListener ) ((colaListener)listener).exitTexto(this);
		}
	}

	public final TextoContext texto() throws RecognitionException {
		TextoContext _localctx = new TextoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_texto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(TEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}